# python-template

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.repo_name}}/: .coveragerc  .flake8  .pre-commit-config.yaml  .travis.yml  LICENSE  Pipfile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg  tox.ini
{{cookiecutter.repo_name}}/.github/workflows/: ci.yml  publish.yml
{{cookiecutter.repo_name}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.repo_name}}/tests/: conftest.py  test_version.py
