[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=3.4", "setuptools-pipfile>=0.7"]
build-backend = "setuptools.build_meta"
{% set year | int %}{% now 'local', '%Y' %}{% endset %}{% set maxpython = year - 2012 -%}
{% set minpython = cookiecutter.requires_python.split('.')[1] | int -%}
{% if minpython < maxpython %}
[tool.black]
target-version = ["py3{{ cookiecutter.requires_python.split('.')[1] }}"]
{% endif %}
[tool.isort]
profile = "black"

[tool.setuptools_scm]

[tool.setuptools-pipfile]
extras = 3
