[bdist_wheel]
universal = 1

[metadata]
name = {{ cookiecutter.repo_name }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
license = {{ cookiecutter.open_source_license }}
license_file = LICENSE
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}
project_urls =
    Bug Tracker = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/issues
    Documentation = https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.repo_name }}/
    Source Code = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}
requires_python = >={{ cookiecutter.requires_python }}
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: {{ cookiecutter.audience }}
{%- if cookiecutter.open_source_license == 'UNKNOWN' %}
    License :: Other/Proprietary License
{%- else %}
    License :: OSI Approved :: {{ cookiecutter.open_source_license }}
{%- endif %}
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
{%- set year | int %}{% now 'local', '%Y' %}{% endset %}{% set maxpython = year - 2011 %}
{%- set minpython = cookiecutter.requires_python.split('.')[1] | int %}
{%- for v in range(minpython, maxpython) %}
    Programming Language :: Python :: 3.{{ v }}
{%- endfor %}

[options]
zip_safe = True
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
#     {{ cookiecutter.repo_name }} = {{ cookiecutter.project_slug }}.cli:main
